# polkadot-sc-up

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  LICENSE  README-old.md  README.md  deploy-and-start.sh  docker-compose.yml  frontend.sh  lib.rs  start.sh  test.rs
frontend/: index.html  main.js  package-lock.json  package.json  vite.config.js
frontend/config/: contract-address.js
